--- a/Collections/Presentation/Presentation-Domain/Screen/Book/AddBook/AddBookViewController.storyboard
+++ b/Collections/Presentation/Presentation-Domain/Screen/Book/AddBook/AddBookViewController.storyboard
@@ -101,6 +101,14 @@
                             <constraint firstItem="xcr-93-PIM" firstAttribute="leading" secondItem="4AZ-Tr-lMN" secondAttribute="leading" constant="72" id="ovI-az-rww"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bookImageView" destination="xcr-93-PIM" id="vJk-Hw-Z4V"/>
+                        <outlet property="bookPriceTextField" destination="Egn-8I-iff" id="xK7-Ro-0m3"/>
+                        <outlet property="bookPurchaseDateTextField" destination="jRN-j8-kLE" id="a3B-9X-QPY"/>
+                        <outlet property="bookTitleTextField" destination="i2S-EU-nGw" id="Xwb-NO-O9Q"/>
+                        <outlet property="imageSelectButton" destination="fpG-xE-NXb" id="k2T-aE-jcS"/>
+                        <outlet property="takingPictureButton" destination="yfe-Vl-4el" id="2Az-uS-fgd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PPs-OB-Wlr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
