--- a/Collections/Presentation/Presentation-Domain/Screen/Book/BookList/BookListViewController.storyboard
+++ b/Collections/Presentation/Presentation-Domain/Screen/Book/BookList/BookListViewController.storyboard
@@ -21,6 +21,10 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="AaR-pO-zsz">
+                                <rect key="frame" x="188.5" y="429.5" width="37" height="37"/>
+                                <color key="color" systemColor="systemGrayColor"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="1C1-Av-CSb"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -28,10 +32,13 @@
                             <constraint firstItem="1C1-Av-CSb" firstAttribute="trailing" secondItem="pcl-54-fhT" secondAttribute="trailing" id="9Lj-OC-e8U"/>
                             <constraint firstItem="pcl-54-fhT" firstAttribute="leading" secondItem="1C1-Av-CSb" secondAttribute="leading" id="k97-KT-y8v"/>
                             <constraint firstItem="1C1-Av-CSb" firstAttribute="bottom" secondItem="pcl-54-fhT" secondAttribute="bottom" id="l9R-OU-2bf"/>
+                            <constraint firstItem="AaR-pO-zsz" firstAttribute="centerY" secondItem="KPZ-m5-PSt" secondAttribute="centerY" id="rcb-PK-Dzc"/>
                             <constraint firstItem="pcl-54-fhT" firstAttribute="top" secondItem="1C1-Av-CSb" secondAttribute="top" id="tNH-eL-TIy"/>
+                            <constraint firstItem="AaR-pO-zsz" firstAttribute="centerX" secondItem="KPZ-m5-PSt" secondAttribute="centerX" id="v7u-3x-92T"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="loadingIndicator" destination="AaR-pO-zsz" id="vj1-9l-vA7"/>
                         <outlet property="tableView" destination="pcl-54-fhT" id="81h-0e-por"/>
                     </connections>
                 </viewController>
@@ -43,6 +50,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
