--- a/Collections/Presentation/Presentation-Domain/Screen/Book/EditBook/EditBookViewController.storyboard
+++ b/Collections/Presentation/Presentation-Domain/Screen/Book/EditBook/EditBookViewController.storyboard
@@ -32,7 +32,7 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="28" translatesAutoresizingMaskIntoConstraints="NO" id="Gai-ex-vW5">
-                                <rect key="frame" x="56" y="354" width="302" height="286"/>
+                                <rect key="frame" x="56" y="354" width="302" height="291"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SxR-wM-chO" customClass="IBDesignableButton" customModule="Collections" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="302" height="32"/>
@@ -59,7 +59,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="VCi-rN-AWB">
-                                        <rect key="frame" x="0.0" y="120" width="302" height="166"/>
+                                        <rect key="frame" x="0.0" y="120" width="302" height="171"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="rHr-Kw-sjQ">
                                                 <rect key="frame" x="0.0" y="0.0" width="302" height="37"/>
@@ -99,14 +99,25 @@
                                                     </label>
                                                 </subviews>
                                             </stackView>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="購入日" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="gbp-mZ-PLg" customClass="BorderBottomTextField" customModule="Collections" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="134" width="302" height="32"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="32" id="abn-TR-2qU"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="D90-lv-n7c">
+                                                <rect key="frame" x="0.0" y="134" width="302" height="37"/>
+                                                <subviews>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="購入日" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="gbp-mZ-PLg" customClass="BorderBottomTextField" customModule="Collections" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="0.0" width="302" height="32"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="32" id="abn-TR-2qU"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZEM-hd-crI">
+                                                        <rect key="frame" x="0.0" y="37" width="302" height="0.0"/>
+                                                        <fontDescription key="fontDescription" name="HiraMinProN-W6" family="Hiragino Mincho ProN" pointSize="12"/>
+                                                        <color key="textColor" systemColor="systemRedColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
                                         </subviews>
                                     </stackView>
                                 </subviews>
@@ -129,9 +140,10 @@
                         <outlet property="bookPurchaseDateTextField" destination="gbp-mZ-PLg" id="Ejh-OY-WYn"/>
                         <outlet property="bookTitleTextField" destination="lOD-lW-6Wr" id="VoO-1D-ySs"/>
                         <outlet property="imageSelectButton" destination="SxR-wM-chO" id="xfw-Gf-RHx"/>
-                        <outlet property="stackView" destination="rHr-Kw-sjQ" id="SPs-4y-zyw"/>
+                        <outlet property="stackView" destination="D90-lv-n7c" id="ZKj-qU-cW1"/>
                         <outlet property="takingPictureButton" destination="4Ex-Ra-hHc" id="6ti-Pa-m33"/>
                         <outlet property="validatePriceLabel" destination="u01-nu-K4G" id="jQ9-1C-gdO"/>
+                        <outlet property="validatePurchaseDateLabel" destination="ZEM-hd-crI" id="9EP-J5-qOg"/>
                         <outlet property="validateTitleLabel" destination="dmP-pk-6k1" id="vqV-fL-uST"/>
                     </connections>
                 </viewController>
