追加: 書籍一覧->書籍編集時にデータセット

--- a/Collections/Presentation/Presentation-Domain/Screen/Book/EditBook/EditBookViewController.storyboard
+++ b/Collections/Presentation/Presentation-Domain/Screen/Book/EditBook/EditBookViewController.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="No_Image" translatesAutoresizingMaskIntoConstraints="NO" id="fgD-Aa-xdB">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="No_Image" translatesAutoresizingMaskIntoConstraints="NO" id="fgD-Aa-xdB">
                                 <rect key="frame" x="72" y="68" width="270" height="270"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="fgD-Aa-xdB" secondAttribute="height" multiplier="1:1" id="yC7-SX-fT8"/>
