--- a/Collections/Presentation/Presentation-Domain/Screen/Book/BookList/View/BookListTableViewCell.xib
+++ b/Collections/Presentation/Presentation-Domain/Screen/Book/BookList/View/BookListTableViewCell.xib
@@ -10,48 +10,50 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="100" id="KGk-i7-Jjw" customClass="BookListTableViewCell" customModule="Collections" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="400" height="100"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="138" id="KGk-i7-Jjw" customClass="BookListTableViewCell" customModule="Collections" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="458" height="138"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="400" height="100"/>
+                <rect key="frame" x="0.0" y="0.0" width="458" height="138"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yeu-Me-T7M">
-                        <rect key="frame" x="10" y="10" width="80" height="80"/>
+                        <rect key="frame" x="10" y="10" width="118" height="118"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="Yeu-Me-T7M" secondAttribute="height" multiplier="1:1" id="aFj-zR-F9p"/>
+                            <constraint firstAttribute="width" secondItem="Yeu-Me-T7M" secondAttribute="height" multiplier="1:1" id="cpJ-YZ-ZKE"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイトル" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c6x-qE-cfp">
-                        <rect key="frame" x="106" y="16" width="73.5" height="21.5"/>
-                        <fontDescription key="fontDescription" type="italicSystem" pointSize="18"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="購入日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="98C-W8-aG2">
-                        <rect key="frame" x="106" y="61.5" width="49" height="19.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="金額" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DRs-aK-9NJ">
-                        <rect key="frame" x="319" y="61.5" width="33" height="19.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="UGO-OM-xNn">
+                        <rect key="frame" x="138" y="23" width="256" height="92.5"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="タイトル" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c6x-qE-cfp">
+                                <rect key="frame" x="0.0" y="0.0" width="73.5" height="21.5"/>
+                                <fontDescription key="fontDescription" type="italicSystem" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="金額" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DRs-aK-9NJ">
+                                <rect key="frame" x="0.0" y="37.5" width="33" height="19.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="購入日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="98C-W8-aG2">
+                                <rect key="frame" x="0.0" y="73" width="49" height="19.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="DRs-aK-9NJ" firstAttribute="top" secondItem="c6x-qE-cfp" secondAttribute="bottom" constant="24" id="FCw-uG-KpJ"/>
-                    <constraint firstAttribute="trailing" secondItem="DRs-aK-9NJ" secondAttribute="trailing" constant="48" id="GLz-9J-hnP"/>
-                    <constraint firstItem="98C-W8-aG2" firstAttribute="leading" secondItem="Yeu-Me-T7M" secondAttribute="trailing" constant="16" id="OsU-hm-q8K"/>
-                    <constraint firstItem="98C-W8-aG2" firstAttribute="top" secondItem="c6x-qE-cfp" secondAttribute="bottom" constant="24" id="QK2-WT-mbv"/>
-                    <constraint firstItem="c6x-qE-cfp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="UAc-uA-WW4"/>
-                    <constraint firstItem="Yeu-Me-T7M" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="XFq-AO-Crk"/>
-                    <constraint firstItem="Yeu-Me-T7M" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="hrR-Qh-fne"/>
-                    <constraint firstAttribute="bottom" secondItem="Yeu-Me-T7M" secondAttribute="bottom" constant="10" id="inu-gg-ayP"/>
-                    <constraint firstItem="c6x-qE-cfp" firstAttribute="leading" secondItem="Yeu-Me-T7M" secondAttribute="trailing" constant="16" id="zRG-bx-ehz"/>
+                    <constraint firstItem="Yeu-Me-T7M" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="6H1-zc-0la"/>
+                    <constraint firstItem="UGO-OM-xNn" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="6zl-Zx-Scv"/>
+                    <constraint firstItem="UGO-OM-xNn" firstAttribute="leading" secondItem="Yeu-Me-T7M" secondAttribute="trailing" constant="10" id="UeW-Uw-Ihe"/>
+                    <constraint firstItem="Yeu-Me-T7M" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="YyU-Tj-N8e"/>
+                    <constraint firstAttribute="trailing" secondItem="UGO-OM-xNn" secondAttribute="trailing" constant="64" id="v5w-bE-LAK"/>
+                    <constraint firstAttribute="bottom" secondItem="Yeu-Me-T7M" secondAttribute="bottom" constant="10" id="vpw-ky-TxO"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -61,7 +63,7 @@
                 <outlet property="bookPurchaseLabel" destination="98C-W8-aG2" id="w3U-Ih-MUK"/>
                 <outlet property="bookTitleLabel" destination="c6x-qE-cfp" id="z6s-5T-Dor"/>
             </connections>
-            <point key="canvasLocation" x="85.507246376811594" y="108.48214285714285"/>
+            <point key="canvasLocation" x="127.53623188405798" y="166.07142857142856"/>
         </tableViewCell>
     </objects>
 </document>
